@@ -1,23 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE hibernate-mapping PUBLIC
-  "-//Hibernate/Hibernate Mapping DTD 3.0//EN"
-  "http://www.hibernate.org/dtd/hibernate-mapping-3.0.dtd">
-<hibernate-mapping>
-
-    <class name="ch.ethz.origo.jerpa.data.tier.pojo.HardwareUsageRel" table="HARDWARE_USAGE_REL" schema="APP">
-        <composite-id mapped="true" class="ch.ethz.origo.jerpa.data.tier.pojo.HardwareUsageRelPK">
-            <key-property name="hardwareId">
-                <column name="HARDWARE_ID" sql-type="integer" length="10" not-null="true"/>
-            </key-property>
-            <key-property name="experimentId">
-                <column name="EXPERIMENT_ID" sql-type="integer" length="10" not-null="true"/>
-            </key-property>
-        </composite-id>
-        <many-to-one name="experiment" class="ch.ethz.origo.jerpa.data.tier.pojo.Experiment">
-            <column name="EXPERIMENT_ID" not-null="true"/>
-        </many-to-one>
-        <many-to-one name="hardware" class="ch.ethz.origo.jerpa.data.tier.pojo.Hardware">
-            <column name="HARDWARE_ID" not-null="true"/>
-        </many-to-one>
-    </class>
-</hibernate-mapping>
